add TS